[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Backend library for the Applin™ Server-Driven UI framework"
categories = ["gui", "network-programming"]
edition = "2021"
keywords = ["applin", "mobile", "ui", "reactnative", "flutter"]
license-file = "License.txt"
name = "applin"
repository = "https://github.com/leonhard-llc/applin-rust"
version = "0.2.9"

[dependencies]
#servlin = { version = "^0.6", optional = true, default-features = false, features = ["json"], path = "../servlin" }
servlin = { version = "^0.6", optional = true, default-features = false, features = ["json"] }
nanorand = { version = "0.7", features = ["alloc", "chacha", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
